--- a/app/views/pages/prices.html.haml
+++ b/app/views/pages/prices.html.haml
@@ -20,3 +20,46 @@
 				%p.leading-normal.text-left We also proudly offer a 5% discount to female bootcamp participants. Our industry needs more female developers and we want to do everything we can to help women succeed on their coding journey.
 		%p.my-6.text Finances shouldn't stop anyone from fulfilling their dream of becoming a programmer. We encourage everyone to contact us to discuss payment options, including our flexible deposit and payment schedule.
 		%p.text A new cohort starts every eight weeks. Will you start your career as a junior developer with us?
+
+.payment.paddingx-content.py-6.text-center
+	%h3.text-orange-ca.pb-6.uppercase.text-4xl Payment and funding options
+	%p.mb-6.font-bold The Craft Academy Boot Camp is a private education and thus does not qualify for CSN support. You can choose to pay the education fee according to our standard model or apply for a partial payment. 
+	-# .flex.text-center.border-b-2.bg-orange-ca
+	.prices-grid.bg-orange-ca
+		%div.border-r-2
+			%p Program
+		%div.border-r-2.flex-wrap
+			%p At registration
+			%p (registration fee)
+		%div.border-r-2
+			%p At course start
+		%div.flex
+			%p Total (incl. 25% VAT)
+	.prices-grid
+		%div.text-base.border-r-2
+			%p Full Stack Web Developer
+		%div.border-r-2
+			%p 9 700 SEK
+		%div.border-r-2
+			%p 87 300 SEK
+		%div
+			%p 97 000 SEK
+	.prices-grid
+		%div.text-base.border-r-2
+			%p Enterprise Java Web Application Developer
+		%div.border-r-2
+			%p 11 500 SEK
+		%div.border-r-2
+			%p 103 500 SEK
+		%div
+			%p 115 000 SEK 
+	.prices-grid
+		%div.text-base.border-r-2
+			%p Cyber Security Specialist
+		%div.border-r-2
+			%p 12 500 SEK
+		%div.border-r-2
+			%p 112 500 SEK
+		%div
+			%p 125 000 SEK 
+				
