--- a/app/views/partials/_header.html.haml
+++ b/app/views/partials/_header.html.haml
@@ -1,10 +1,8 @@
-%nav.font-sans.bg-white.text-center.flex.justify-between.my-4.mx-auto.container.overflow-visable
+%nav.font-sans.bg-white.flex.mt-8.mb-4.overflow-visable.justify-center.items-center
   = link_to image_tag('ca_basic_logo_320x40.png', class: 'h-6 rounded-full'), root_path, class: 'block text-left'
   %ul.text-sm.text-grey-dark.list-reset.flex
     %li
       = link_to 'For Recruiters', '#', class: 'ca-header-link'
-    %li.pr-2
-      = link_to 'Pricing' , '#', class: 'ca-header-link'
     %li.pr-2
       = link_to 'FAQs' , '#', class: 'ca-header-link'
     %li.pr-2
